[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dragon_quant", "dragon_quant.*", "web_ui", "web_ui.*"]

[tool.setuptools.package-data]
web_ui = ["dist/**/*"]

[project]
name = "dragon-quant"
version = "0.4.1"
description = "dragon-quant A-gu stock leader screener"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[[project.authors]]
name = "gitBingxu"

[project.urls]
repository = "https://github.com/gitBingxu/dragon-quant"

[project.scripts]
dragon-quant = "dragon_quant.cli:main"
